# wiki-traffic-forecasting

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  slope.c  slope.cp313-win_amd64.pyd  slope.pyx
MEDIA_a/: lgbm_traffic_model-900-0.09-2026-02-24_13-47-18.pkl  readme.txt
MEDIA_b/: lgbm_traffic_model-900-0.09-2026-02-24_14-19-47.pkl  readme.txt
MEDIA_c/: readme.txt
src/: consts.py  features.py  fit_model_lightgbm.py  split_train_test.py
